--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,50 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  background-image: url(http://backgroundcheckall.com/wp-content/uploads/2017/12/block-background-7.jpg)
+}
+
+.box {
+  display: inline-block;
+  border: 1px solid black;
+  width: 15px;
+  height: 15px;
+  margin-left: -1px;
+  margin-bottom: -1px;
+}
+
+.off {
+  background-color: lightgray;
+}
+
+.on {
+  background-color:#00CCFF;
+}
+
+.box:hover {
+  background: #c71585;
+}
+
+.center {
+  margin: auto;
+  display: table;
+  margin-top: 10px;
+}
+
+.grid {
+  width: 150px;
+  line-height: 0;
+  margin: auto;
+  box-shadow: 0px 0px 20px white;
+  margin-top: 20px;
+}
+
+h1, h2, h3, h4 {
+  color: white;
+  margin: auto;
+  text-align: center;
+  width: 50%;
+  margin-top: 10px;
+}
+
+h4 {
+  margin-top: 0px;
 }
